<datalist> creates a dropdown when tied to <input type="range">
Categories
(Toolkit :: Form Manager, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox110 | --- | wontfix |
| firefox111 | --- | wontfix |
| firefox112 | --- | wontfix |
| firefox113 | --- | verified |
People
(Reporter: ana.tudor.lhnh, Assigned: serg)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression, Whiteboard: [fxcm-debt])
Attachments
(3 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/111.0
Steps to reproduce:
- Create a range
inputwith adatalisttied to it:
<div role='group' aria-label='slider with ruler'>
<input type='range' list='l'/>
<datalist id='l'>
<option value='0' label='0'></option>
<option value='50' label='50'></option>
<option value='100' label='100'></option>
</datalist>
</div>
- Make the
datalista 3 column grid in order to create a ruler with labels made out of theoptionsfor the slider:
datalist {
display: grid;
grid-template-columns: repeat(5, 2em)
}
- At first, all seems fine.
Actual results:
But when dragging the slider to change the value from a value without an option[label] corespondent to one with an option[label] correspondent, we get a dropdown covering the rendered option elements making up the slider ruler.
Live test https://codepen.io/thebabydino/pen/poZXqQO
Expected results:
The dropdown should not appear in this case as the datalist is not tied to a text or search input, but to a range one. This is what happens in Chromium browsers.
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Disability Access APIs' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•2 years ago
|
||
Now we support tick marks for the native rendering, not showing the popup probably makes sense.
Updated•2 years ago
|
Updated•2 years ago
|
Comment 3•2 years ago
|
||
Looks like it's not only range controls: Buttons, checkboxes, and radio buttons also show a popup as of 2c8ff4622a78 (see testcase Non-text controls that show a suggestions popup). I think only single-line text controls are expected to show a popup.
Updated•2 years ago
|
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 4•2 years ago
|
||
Set release status flags based on info from the regressing bug 1767250
Updated•2 years ago
|
Comment 5•2 years ago
|
||
:issammani, since you are the author of the regressor, bug 1767250, could you take a look?
Updated•2 years ago
|
| Assignee | ||
Comment 6•2 years ago
|
||
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 8•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Comment 9•2 years ago
|
||
The patch landed in nightly and beta is affected.
:serg, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox112towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•2 years ago
|
Updated•2 years ago
|
Reproduced the initial issue described in comment 0 using an old Nightly before the fix, verified that using latest Firefox 113.0b8 across platforms (macOS 13, Ubuntu 22.04 and Windows 10) the dropdown with the values are no longer displayed when changing the input.
Description
•