Bug 1816134 - show datalist in autocomplete for text controls only r=credential-management-reviewers,dimi

Differential Revision: https://phabricator.services.mozilla.com/D172626